<resources>
    <string name="app_name">Insights</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="btnTxt">Login</string>
    <string name="txtSignUp">Sign Up</string>
    <string name="TxtViewOthers">Or Sign-in Using</string>
    <string name="StringShowPass">Show Password</string>
    <string name="StringForgotPass">Forgot Password?</string>
    <string name="StringNewUser">New User? Click here to Sign up</string>
    <string name="txtLoginIN">LOGIN</string>
    <string name="txtEmail">Email Id</string>
    <string name="stringInstructions">Please enter your Registered Email Id Below:</string>
    <string name="txtConfirmPass">Confirm Password</string>
    <string name="txtBacktoLogin">Already Registered? Click to Login</string>
    <string name="forgotPasswordHint">Email</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_AddExpense">Add Expense</string>
    <string name="menu_PayBills">Pay Bills</string>
    <string name="menu_AccDetails">Account Details</string>
    <string name="menu_Logout">Logout</string>
    <string name="menu_ViewExpense">View Expenses</string>
    <string name="menu_ShowExpense">View Expenses</string>
    <string name="txtDescription">Description</string>
    <string name="txtCatDesc">Category</string>
    <string name="txtDateDesc">Date</string>
    <string name="txtBtn">Add Expense</string>
    <string name="txtAmtDesc">Amount</string>
    <string name="txtSetLimit">Montly Spend Limit</string>
    <string name="txtViewNoData">Input Data to View Visualised Data</string>
    <string name="menu_ExpenseSummary">Expense Summary</string>
    <string name="errorMessageSearch">No Data to Visualise</string>
    <string name="txtSave">Save</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtAccountSettings">Account Settings</string>
    <string name="action_AboutUs">About Us</string>
    <string name="StringVersion">V 1.0.0</string>
    <string name="descriptionHeading">Title</string>
    <string name="amountHeader">Amount</string>
    <string name="imageHeader">Category</string>
    <string name="editHeader">Edit</string>
    <string name="deleteHeader">Delete</string>
    <string name="userDeleteButtonText">DELETE USER AND LOGOUT</string>
    <string name="StringOptions">Or Sign-In Using</string>

    <string-array name="spinnerCategoryTypes">
        <item>Shopping</item>
        <item>Travel</item>
        <item>Personal Care</item>
        <item>Pets</item>
    </string-array>

</resources>