<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:backgroundTint="@color/teal_700"
    tools:context=".Reggister">

    <TextView
        android:id="@+id/txtViewSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/txtSignUp"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtTxtUserId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:gravity="center_vertical"
        android:hint="@string/txtEmail"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewSignUp" />

    <EditText
        android:id="@+id/edtTxtUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtUserId" />

    <EditText
        android:id="@+id/edtTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtUser" />

    <EditText
        android:id="@+id/edtTextPasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:gravity="center_vertical"
        android:hint="@string/txtConfirmPass"
        android:inputType="textPassword"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPassword" />

    <EditText
        android:id="@+id/edtTextSetLimit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_baseline_attach_money_24"
        android:gravity="center_vertical"
        android:hint="@string/txtSetLimit"
        android:inputType="number"
        android:padding="20dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextPasswordConfirm" />

    <Button
        android:id="@+id/BtnLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:padding="3dp"
        android:text="REGISTER"
        android:textColor="@color/teal_700"
        android:textColorHint="@color/teal_700"
        android:textColorLink="@color/teal_700"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextSetLimit" />

    <TextView
        android:id="@+id/txtViewLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="50dp"
        android:clickable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/txtBacktoLogin"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>