<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:backgroundTint="@color/teal_700"
    tools:context=".ui.account.AccountDetails_Fragment">

        <TextView
            android:id="@+id/txtViewAccountDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:editable="false"
            android:gravity="center"
            android:text="@string/txtAccountSettings"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtTxtUserIdView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:editable="false"
            android:gravity="center_vertical"
            android:hint="@string/txtEmail"
            android:inputType="none"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewAccountDetails" />

        <EditText
            android:id="@+id/edtTxtUserNameView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:clickable="false"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:editable="false"
            android:gravity="center_vertical"
            android:hint="@string/username"
            android:inputType="none"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtUserIdView" />

        <EditText
            android:id="@+id/edtTextPasswordChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTxtUserNameView" />

        <EditText
            android:id="@+id/edtTextPasswordChangeConfirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:gravity="center_vertical"
            android:hint="@string/txtConfirmPass"
            android:inputType="textPassword"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTextPasswordChange" />

        <EditText
            android:id="@+id/edtTextSetLimitChange"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_baseline_attach_money_24"
            android:gravity="center_vertical"
            android:hint="@string/txtSetLimit"
            android:inputType="number"
            android:padding="20dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTextPasswordChangeConfirm" />

        <Button
            android:id="@+id/BtnSaveSettings"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:padding="3dp"
            android:text="SAVE SETTINGS"
            android:textColor="@color/teal_700"
            android:textColorHint="@color/teal_700"
            android:textColorLink="@color/teal_700"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtTextSetLimitChange" />
    </androidx.constraintlayout.widget.ConstraintLayout>

